--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,22 @@ button {
   #todo-list{
     text-align: center;
     position: absolute;
-    right:20%;
-    top:60%;
+    right:5%;
+    top:35%;
+  }
+
+  #todoList-card {
+    background-color: rgba( 255, 255, 255, 0.6 );
+    color: #000;
+    width: 500px;
+    height: 600px;
+    border-radius: 8px;
+    overflow: hidden;
+    /* margin: 100px auto; */
+    transition: all 0.3s cubic-bezier(0.42, 0.0, 0.58, 1.0);
+  }
+
+  #todoList-card:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    transform: translateY(-10px);
   }
